src/test/deca/context/valid/iden.deca
// Description:
//    declaration simple
//
// Resultats:
//  ok
// 
// Historique:
//    cree le 01/01/2022

{
    int a;
    float b;
    boolean d;
    
}